# gtest_terminal_ui

./: .clang-format  .gitignore  main.cpp  meson.build
components/: TestItem.cpp
components/include/: TestItem.h
include/: ITestFinder.h  Logger.h  Renderer.h  State.h  TestFinder.h  TestRunner.h  Types.h
src/: Logger.cpp  Renderer.cpp  TestFinder.cpp  TestRunner.cpp
test/: TestDom.cpp  TestTestFinder.cpp  test.cpp
test/FakeTestDir/: TestFake1.cpp  TestFake2.cpp  TestFake3.cpp
test/Mocks/: TestFinderMock.h
